# cc-py-template

./: README.rst  cookiecutter.json
{{cookiecutter.project_name}}/: .travis.yml  Makefile  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_slug}}.py
