[tool.poetry]
name = "mock"
version = "0.1.0"
description = "Mock package to test pipeline development structure"
authors = ["robert-v <robertvigorito@gmail.com>"]

[tool.poetry.dependencies]
python = ">=2.7,<2.8 || >=3.6.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
